--- a/darknet_ros/config/ros.yaml
+++ b/darknet_ros/config/ros.yaml
@@ -1,8 +1,8 @@
 subscribers:
 
   camera_reading:
-    topic: /camera/rgb/image_raw
-    queue_size: 1
+    topic: /img_out
+    queue_size: 0
 
 actions:
 
@@ -13,18 +13,18 @@ publishers:
 
   object_detector:
     topic: /darknet_ros/found_object
-    queue_size: 1
+    queue_size: 0
     latch: false
 
   bounding_boxes:
     topic: /darknet_ros/bounding_boxes
-    queue_size: 1
+    queue_size: 0
     latch: false
 
   detection_image:
     topic: /darknet_ros/detection_image
-    queue_size: 1
-    latch: true
+    queue_size: 0
+    latch: false
 
 image_view:
 
